<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:paddingTop="@dimen/toolbar_padding_top"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/share_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_fenxiang"/>
        <ImageView
            android:id="@+id/users_header"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_touxiang_def"/>
        <TextView
            android:id="@+id/loginOrUsersname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:padding="2dp"
            android:textColor="@color/white"
            android:text="@string/loginOrUserName"
            android:layout_below="@id/users_header"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layerType="software"
            android:background="@drawable/line_view"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_qiandao"
            android:drawableRight="@drawable/ic_chevron_right_gray_24dp"
            android:drawablePadding="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/signed"
            android:gravity="center_vertical"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layerType="software"
            android:background="@drawable/line_view"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_qiandaojilu"
            android:drawableRight="@drawable/ic_chevron_right_gray_24dp"
            android:drawablePadding="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/signedhis"
            android:gravity="center_vertical"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layerType="software"
            android:background="@drawable/line_view"/>
        <TextView
            android:id="@+id/lottery_draw"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_choujiang"
            android:drawableRight="@drawable/ic_chevron_right_gray_24dp"
            android:drawablePadding="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/lotterydrow"
            android:gravity="center_vertical"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layerType="software"
            android:background="@drawable/line_view"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_shoucang"
            android:drawableRight="@drawable/ic_chevron_right_gray_24dp"
            android:drawablePadding="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/mycollection"
            android:gravity="center_vertical"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layerType="software"
            android:background="@drawable/line_view"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_llls"
            android:drawableRight="@drawable/ic_chevron_right_gray_24dp"
            android:drawablePadding="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/lookhis"
            android:gravity="center_vertical"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layerType="software"
            android:background="@drawable/line_view"/>
        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_about"
            android:drawableRight="@drawable/ic_chevron_right_gray_24dp"
            android:drawablePadding="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/about"
            android:gravity="center_vertical"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layerType="software"
            android:background="@drawable/line_view"/>
    </LinearLayout>

</RelativeLayout>