<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_refresh_widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <RelativeLayout
            android:id="@+id/select_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/electriccars_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/electriccars"
                    style="@style/select_btn"
                    android:background="@drawable/textview_left_normal_style"/>
                <Button
                    android:id="@+id/carsnews_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/carsnews"
                    style="@style/select_btn"
                    android:background="@drawable/textview_center_normal_style"/>
                <Button
                    android:id="@+id/hybridcars_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hybridcars"
                    style="@style/select_btn"
                    android:background="@drawable/textview_right_normal_style"/>
            </LinearLayout>

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/pager_e_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/select_tv"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:paddingTop="5dp">

        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>
</android.support.v4.widget.SwipeRefreshLayout>